<resources>
    <string name="app_name">Calculator</string>
    <string name="button0_text">0</string>
    <string name="button1_text">1</string>
    <string name="button2_text">2</string>
    <string name="button3_text">3</string>
    <string name="button4_text">4</string>
    <string name="button5_text">5</string>
    <string name="button6_text">6</string>
    <string name="button7_text">7</string>
    <string name="button8_text">8</string>
    <string name="button9_text">9</string>
    <string name="buttonPlus_text">+</string>
    <string name="buttonMinus_text">-</string>
    <string name="buttonDivi_text">÷</string>
    <string name="buttonMulti_text">X</string>
    <string name="buttonDot_text">.</string>
    <string name="buttonPercentage">%</string>
    <string name="buttonRoot_text">√</string>
    <string name="buttonSquare_text">x²</string>
    <string name="buttonInverse_text">Inv</string>
    <string name="buttonEqual_text">=</string>
    <string name="buttonDEL_text">DEL</string>
    <string name="buttonCE_text">CE</string>
    <string name="buttonC_text">C</string>
    <string name="buttonMC_text">MC</string>
    <string name="buttonMR_text">MR</string>
    <string name="buttonMS_text">MS</string>
    <string name="buttonMPlus_text">M+</string>
    <string name="buttonMMinus_text">M-</string>
    <string name="buttonPosNeg_text">±</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_history">historyActivity</string>
    <string name="history">HISTORY</string>
    <string name="RESULT">RESULT</string>

    <item name="edit_message" type="id">test</item>
</resources>
