<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"

    android:background="#fafafa">

    <TextView
        android:id="@+id/txtMemory"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:textSize="15sp"
        android:textColor="#4CAF50"
        android:gravity="left"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtStack"
        android:editable="false"
        android:gravity="bottom|right"
        android:layout_below="@+id/txtMemory"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"

        android:textColor="#1ecee1"
        android:nestedScrollingEnabled="true"
        android:scrollIndicators="left|right"
        android:maxLength="999" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/txtInput"
        android:gravity="bottom|right"
        android:inputType="none"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:layout_below="@+id/txtStack"
        android:textSize="20sp"
        android:textColor="#1ecee1"
        android:singleLine="true"
        android:maxLength="20" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtInput"
        android:background="#009688">

    </RelativeLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#009688"
        android:id="@+id/tableLayout2"
        android:layout_below="@+id/txtInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonMC_text"
                android:id="@+id/buttonMC"
                android:layout_column="1"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonMR_text"
                android:id="@+id/buttonMR"
                android:layout_column="2"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonMS_text"
                android:id="@+id/buttonMS"
                android:layout_column="4"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonMPlus_text"
                android:id="@+id/buttonMPLUS"
                android:layout_column="6"
                android:textAlignment="center"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonDEL_text"
                android:id="@+id/buttonDel"
                android:layout_column="1"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonCE_text"
                android:id="@+id/buttonCE"
                android:layout_column="2"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonC_text"
                android:id="@+id/buttonC"
                android:layout_column="4"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonMMinus_text"
                android:id="@+id/buttonMMinus"
                android:layout_column="6"
                android:textAlignment="center"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonPosNeg_text"
                android:id="@+id/buttonPosNeg"
                android:layout_column="1"
                android:textAlignment="center"
                android:layout_weight="1"
                android:clickable="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonRoot_text"
                android:id="@+id/buttonRoot"
                android:layout_column="2"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonInverse_text"
                android:id="@+id/buttonInv"
                android:layout_column="4"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonDivi_text"
                android:id="@+id/buttonDivi"
                android:layout_column="6"
                android:textAlignment="center"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button7_text"
                android:id="@+id/button7"
                android:layout_column="1"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button8_text"
                android:id="@+id/button8"
                android:layout_column="2"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button9_text"
                android:id="@+id/button9"
                android:layout_column="4"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonMulti_text"
                android:id="@+id/buttonMulti"
                android:layout_column="6"
                android:textAlignment="center"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button4_text"
                android:id="@+id/button4"
                android:layout_column="1"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button5_text"
                android:id="@+id/button5"
                android:layout_column="2"
                android:textAlignment="center"
                android:clickable="false"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button6_text"
                android:id="@+id/button6"
                android:layout_column="4"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonMinus_text"
                android:id="@+id/buttonSub"
                android:layout_column="6"
                android:textAlignment="center"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button1_text"
                android:id="@+id/button1"
                android:layout_column="1"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button2_text"
                android:id="@+id/button2"
                android:layout_column="2"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button3_text"
                android:id="@+id/button3"
                android:layout_column="4"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonPlus_text"
                android:id="@+id/buttonAdd"
                android:layout_column="6"
                android:textAlignment="center"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonPercentage"
                android:id="@+id/buttonPercentage"
                android:layout_column="1"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button0_text"
                android:id="@+id/button0"
                android:layout_column="2"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonDot_text"
                android:id="@+id/buttonDot"
                android:layout_column="4"
                android:textAlignment="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonEqual_text"
                android:id="@+id/buttonEqual"
                android:layout_column="6"
                android:textAlignment="center"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:id="@+id/buttonHistory"
        android:layout_below="@+id/tableLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/RESULT"
        android:inputType="none"
        android:layout_below="@+id/txtStack"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/buttonHistory"
        android:layout_alignEnd="@+id/buttonHistory"
        android:layout_alignBottom="@+id/txtInput"
        android:textSize="20sp"
        android:textColor="#1ecee1" />

</RelativeLayout>
